Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121509

UTF support is broken in regular expressions of Qt's JS engine

    XMLWordPrintable

Details

    • All
    • ebc65409e (dev), 413710898 (dev)

    Description

      This line is expected to output 'true':

      console.log(/2/igu.test('1 2 3'));

      And it does with node.js, but not with Qt's QML/JS engine.

      If I remove 'u' flag it is working as expected.

      UTF support is broken.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            ighor IGHOR
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes